# multi-tenant-cluster-eks

./: .gitignore  README.md  app-of-apps.yaml  docker-compose.yml
.github/workflows/: app-ci.yml
app/: .dockerignore  Dockerfile  README.md  pyproject.toml
app/flyway/sql/: V1__initial_schema.sql
app/voting/: config.py  db.py  main.py
argocd/: 00-root.yaml  root.yaml
argocd/apps/: 00-project-platform.yaml  03-karpenter.yaml  04-karpenter-nodes.yaml  05-albc.yaml  06-gateway-api-crds.yaml  06-istio-base.yaml  07-istiod.yaml  08-istio-cni.yaml  09-ztunnel.yaml  albc.yaml  eso-resources.yaml  eso.yaml  karpenter-nodes.yaml  kube-prometheus-stack.yaml  prometheus-operator-crds.yaml  voting-app.yaml
argocd/bootstrap/: 01-init.yaml  02-platform.yaml  03-tenants.yaml  03-workloads.yaml  platform.yaml  projects.yaml  tenants.yaml  workloads.yaml
argocd/init/: platform.yaml  team-a.yaml  team-b.yaml
argocd/platform/: albc.yaml  compute.yaml  delivery.yaml  eso-resources.yaml  eso.yaml  gateway-api-crds.yaml  istio-base.yaml  istio-cni.yaml  istio-gateway.yaml  (+9 more)
argocd/platform-init/: tenants-appset.yaml
docs/: 02-app.md  03-helm.md  05-eks.md  05-infra.md  06-argocd.md  index.html  redesign.md  security.md  test.md  v3.md  v4.md  v5.md  web-plan.md
infra/: .gitignore  01-variables.tf  02-locals.tf  03-providers.tf  04-outputs.tf  10-vpc.tf  11-eks.tf  12-eks-argocd.tf  12-eks-karpenter.tf  13-eks-argocd.tf  13-eks-csi.tf  13-eks-eso.tf  14-eks-albc.tf  15-eks-eso.tf  15-eks-karpenter.tf  terraform.tfvars.example
tenant-chart/: Chart.yaml  values.yaml
(+126 files in other folders)
